# MakePromptEasy

./: .gitignore  .promptpackignore.example  README.md  plan-makePromptEasy.prompt.md  pyproject.toml
.github/workflows/: ci.yml
src/prompt_pack/: __init__.py  cli.py  config.py  filters.py  formatter.py  ignorefilter.py  scanner.py
tests/: conftest.py  test_cli_integration.py  test_filters.py  test_formatter.py  test_ignorefilter.py  test_scanner.py
